// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sidebar should match previous snapshot (with question) 1`] = `
<aside>
  <styled.div
    borderLeft="solid 1px #DBD9D2"
    display="grid"
    gridTemplateRows="auto auto auto 1fr"
    height="90vh"
    padding="24px 64px"
    position="sticky"
    top="24px"
  >
    <Paragon
      lineHeight="initial"
      margin={0}
      tag="h1"
      textTransform="capitalize"
    >
      test concept
    </Paragon>
    <Pica
      lineHeight="initial"
      margin={0}
      tag="h2"
      textTransform="capitalize"
    >
      test lesson
    </Pica>
    <ConceptContentNavigator
      conceptContent={
        Array [
          Object {
            "content": "test lesson content",
            "description": "test lesson description",
            "id": 1,
            "order": 0,
            "title": "test lesson",
          },
          Object {
            "content": "lesson 1's content",
            "description": "another lesson description",
            "id": 1,
            "order": 1,
            "title": "lesson 1",
          },
          Object {
            "content": "lesson 2's content",
            "description": "another lesson description",
            "id": 2,
            "order": 2,
            "title": "lesson 2",
          },
        ]
      }
      currentDocOrder={0}
      redirectTo={[MockFunction]}
    />
    <QuestionForm
      answers={
        Array [
          Object {
            "id": 1,
            "text": "answer 1",
            "valid": false,
          },
          Object {
            "id": 2,
            "text": "answer 2",
            "valid": false,
          },
          Object {
            "id": 3,
            "text": "answer 3",
            "valid": true,
          },
          Object {
            "id": 4,
            "text": "answer 4",
            "valid": false,
          },
        ]
      }
      onSubmit={[MockFunction]}
      singleChoice={true}
      t={[Function]}
    />
  </styled.div>
</aside>
`;

exports[`Sidebar should match previous snapshot (without question) 1`] = `
<aside>
  <styled.div
    borderLeft="solid 1px #DBD9D2"
    display="grid"
    gridTemplateRows="auto auto auto 1fr"
    height="90vh"
    padding="24px 64px"
    position="sticky"
    top="24px"
  >
    <Paragon
      lineHeight="initial"
      margin={0}
      tag="h1"
      textTransform="capitalize"
    >
      test concept
    </Paragon>
    <Pica
      lineHeight="initial"
      margin={0}
      tag="h2"
      textTransform="capitalize"
    >
      test lesson
    </Pica>
    <ConceptContentNavigator
      conceptContent={
        Array [
          Object {
            "content": "test lesson content",
            "description": "test lesson description",
            "id": 1,
            "order": 0,
            "title": "test lesson",
          },
          Object {
            "content": "lesson 1's content",
            "description": "another lesson description",
            "id": 1,
            "order": 1,
            "title": "lesson 1",
          },
          Object {
            "content": "lesson 2's content",
            "description": "another lesson description",
            "id": 2,
            "order": 2,
            "title": "lesson 2",
          },
        ]
      }
      currentDocOrder={0}
      redirectTo={[MockFunction]}
    />
  </styled.div>
</aside>
`;
